--- a/Engine/app.config
+++ b/Engine/app.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Engine.Settings.SystemSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="Engine.Settings.System" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
@@ -9,6 +10,11 @@
         </sectionGroup>
     </configSections>
     <applicationSettings>
+        <Engine.Settings.SystemSettings>
+            <setting name="Video_MinimumSupportedResolution" serializeAs="String">
+                <value>1024, 768</value>
+            </setting>
+        </Engine.Settings.SystemSettings>
         <Engine.Settings.System>
             <setting name="Video_Resolution" serializeAs="String">
                 <value>1920, 1080</value>
