--- a/Engine/Settings/SystemSettings.settings
+++ b/Engine/Settings/SystemSettings.settings
@@ -32,5 +32,8 @@
     <Setting Name="Video_IsBorderless" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="Video_MinimumSupportedResolution" Type="System.Drawing.Size" Scope="Application">
+      <Value Profile="(Default)">1024, 768</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
