--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -58,6 +58,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SystemSettingsLocal.resx</DependentUpon>
     </Compile>
+    <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Screens\MainMenuScreen.cs" />
+    <Compile Include="Screens\Screen.cs" />
+    <Compile Include="Screens\ScreenGameComponent.cs" />
+    <Compile Include="Screens\SplashScreen.cs" />
     <Compile Include="Utility\ComboBoxItem.cs" />
     <Compile Include="Settings\GameSettings.Designer.cs">
       <AutoGen>True</AutoGen>
