--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -58,10 +58,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SystemSettingsLocal.resx</DependentUpon>
     </Compile>
+    <Compile Include="Managers\MusicManager.cs" />
+    <Compile Include="Managers\SoundManager.cs" />
+    <Compile Include="Registrations\RegisterScreens.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Screens\MainMenuScreen.cs" />
     <Compile Include="Screens\Screen.cs" />
-    <Compile Include="Screens\ScreenGameComponent.cs" />
+    <Compile Include="Managers\ScreenManager.cs" />
     <Compile Include="Screens\SplashScreen.cs" />
     <Compile Include="Utility\ComboBoxItem.cs" />
     <Compile Include="Settings\GameSettings.Designer.cs">
@@ -168,7 +171,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
-    <Folder Include="Managers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
