--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -50,6 +50,10 @@
     <Compile Include="Components\SimpleGameComponent.cs" />
     <Compile Include="ContentExtensions\ContentReaderExtensions.cs" />
     <Compile Include="Entities\Tile.cs" />
+    <Compile Include="Entities\TileGameModeEnum.cs" />
+    <Compile Include="Entities\TileGameModes\ShuffleGameSettings.cs" />
+    <Compile Include="Entities\TileGameModes\SwapperGameSettings.cs" />
+    <Compile Include="Entities\TileGameModes\ScatterGameSettings.cs" />
     <Compile Include="Entities\TileGameSettings.cs" />
     <Compile Include="Forms\SystemSettings.cs">
       <SubType>Form</SubType>
