--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Managers\SoundManager.cs" />
     <Compile Include="Registrations\Register.cs" />
     <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Screens\NewGameScreen.cs" />
+    <Compile Include="Screens\OptionsScreen.cs" />
     <Compile Include="Screens\MainMenuScreen.cs" />
     <Compile Include="Screens\TileGameScreen.cs" />
     <Compile Include="Screens\Screen.cs" />
